objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Request Ticket</fullName>
        <description>Request Ticket Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Information Provided</fullName>
        </values>
        <values>
            <fullName>More Information needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Ticket</fullName>
        <description>Support Ticket Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Information Provided</fullName>
        </values>
        <values>
            <fullName>More Information needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <label>Case Comment</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Check__c</fullName>
        <formula>IF((LEFT(OwnerId,3) = &quot;00G&quot;) , &quot;Queue&quot;, &quot;User&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>IF((TODAY() - DATEVALUE(CreatedDate))&lt;=1,&apos;Low&apos;,
 IF((TODAY() - DATEVALUE(CreatedDate))&gt;1 &amp;&amp; (TODAY() - DATEVALUE(CreatedDate))&lt;1.5 ,&apos;Medium&apos;,
 IF((TODAY() - DATEVALUE(CreatedDate))&gt;=1.5,&apos;High&apos;, &apos;Very High&apos; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <inlineHelpText>Support-If you are facing issue or question&apos;s related to Return &amp; Refunds, Shipping &amp; Tracking, Delivery, Order issues and Orders then you can submit case by selecting case type &apos;Support&apos;./ Request-If you are facing technical issue or question&apos;s related to Phone &amp; Tablets, Desktop &amp; PC, Earphones and Headphones,Digital Watch then you can submit case by selecting case type &apos;Request&apos;./ Other-If you are facing any issue other than &apos;Support&apos; &amp; &apos;Request&apos; then you can submit case by selecting case type &apos;Other&apos;.</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>display the date when case is closed</description>
        <label>ClosedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CounterRequestor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CounterRequestor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedMonth__c</fullName>
        <label>Created Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MilestoneCompletionTime__c</fullName>
        <formula>SlaStartDate  + (5/1440)</formula>
        <label>MilestoneCompletionTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <label>MobileNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notified_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please click on this checkbox to notify the customer, if the source of the case is web or email.</inlineHelpText>
        <label>Case Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By clicking on the checkbox, the user will get notified via email about multiple cases that are already in queue and the milestone will get extended by 24 hours.</inlineHelpText>
        <label>Notified User in case of Heavy workload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_list__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product list</label>
        <referenceTo>Product_list__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Comment__c</fullName>
        <label>Resolution Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revert_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revert mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Catalogue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Catalogue</label>
        <referenceTo>Service_Catalogue__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cate__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repairs &amp; Physical Damage</fullName>
                </value>
                <value>
                    <fullName>Device Performance</fullName>
                </value>
                <value>
                    <fullName>Update, Backup, restore</fullName>
                </value>
                <value>
                    <fullName>Passwords &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Subscriptions &amp; Purchases</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Apps &amp; Software</fullName>
                </value>
                <value>
                    <fullName>Battery &amp; Power</fullName>
                </value>
                <value>
                    <fullName>Physical or Liquid Damage</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Sound</fullName>
                </value>
                <value>
                    <fullName>Battery &amp; Charging</fullName>
                </value>
                <value>
                    <fullName>Pairing Connectivity</fullName>
                </value>
                <value>
                    <fullName>Audio &amp; Sound</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Fitness</fullName>
                </value>
                <value>
                    <fullName>Pairing &amp; Connectivity</fullName>
                </value>
                <value>
                    <fullName>Bands &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Setup &amp; Usage</fullName>
                </value>
                <value>
                    <fullName>Battery, Power &amp; Charging</fullName>
                </value>
                <value>
                    <fullName>Return Purchase</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Gift Item</fullName>
                </value>
                <value>
                    <fullName>Refund time</fullName>
                </value>
                <value>
                    <fullName>Delivery Time</fullName>
                </value>
                <value>
                    <fullName>Track order</fullName>
                </value>
                <value>
                    <fullName>Shipping Charges</fullName>
                </value>
                <value>
                    <fullName>Remove Label</fullName>
                </value>
                <value>
                    <fullName>Wrong Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Not Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_resolution__c</fullName>
        <label>Submit resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Duration__c</fullName>
        <formula>TEXT( Account.Subscription_duration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <formula>TEXT( Account.Subscription__c )</formula>
        <label>Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <formula>IMAGE
(
IF( CONTAINS(&quot;Low&quot;, Case_Priority__c ),
&quot;/img/samples/flag_green.gif&quot;,
IF( CONTAINS(&quot;Medium&quot;,Case_Priority__c),
&quot;/img/samples/flag_yellow.gif&quot;,
&quot;/img/samples/flag_red.gif&quot;
)
),
&quot;&quot;, 15, 15
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cate__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone and Tablets</fullName>
                </value>
                <value>
                    <fullName>Desktop and PC</fullName>
                </value>
                <value>
                    <fullName>Earphones &amp; Headphones</fullName>
                </value>
                <value>
                    <fullName>Return &amp; Refunds</fullName>
                </value>
                <value>
                    <fullName>Digital Watch</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Tracking</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Order Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>resolution_reverted__c</fullName>
        <label>resolution reverted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Request_Ticket</fullName>
        <active>true</active>
        <businessProcess>Request Ticket</businessProcess>
        <description>Request Ticket Record Type</description>
        <label>Request Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Tickett</fullName>
        <active>true</active>
        <businessProcess>Request Ticket</businessProcess>
        <label>Request Tickett</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Ticket</fullName>
        <active>true</active>
        <businessProcess>Support Ticket</businessProcess>
        <description>Support Ticket Record type</description>
        <label>Support Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Tickett</fullName>
        <active>true</active>
        <businessProcess>Support Ticket</businessProcess>
        <label>Support Tickett</label>
    </recordTypes>
</CustomObject>